--- a/src/components/content/productCard/ProductCard.css
+++ b/src/components/content/productCard/ProductCard.css
@@ -1,13 +1,5 @@
-.carrouselCard{
-    display: flex;
-}
-.verticalCard{
-    width: 20vh;
-    height: 30vh;
-    object-fit: cover;
-    position:relative;
-}
 .verticalCard img{
+    position: relative;
     width: 100%;
     height: 100%;
     border-radius: 0.4rem;
